More production environment setup; Deleted 'console.log...' lines of codees; fixed bug on password input visibilty on registration and login forms

--- a/static_cdn/sni_app/css/detail_blog.css
+++ b/static_cdn/sni_app/css/detail_blog.css
@@ -24,8 +24,8 @@ body {
     top: -100px;
     background-size: cover;
     height: fit-content;
-    -webkit-animation: animate-background 5s infinite;
-    animation: animate-background 5s infinite;
+    -webkit-animation: animate-background 10s infinite;
+    animation: animate-background 10s infinite;
 }
 
 @-webkit-keyframes animate-arrow {
@@ -82,7 +82,7 @@ body {
     color: #002657;
 }
 
-#jump-to-content svg {
+#jump-to-content i {
     margin: 20px auto auto auto;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
